--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> FLL UNEHERATED</title>
+    <title>FLL UNEHERATED</title>
     <style>
         body {
             font-family: 'Poppins', sans-serif;
@@ -80,7 +80,7 @@
     <div class="logo-container">
         <img src="logo scorer.png" alt="Logo da Equipe">
     </div>
-    <h1>Ferramentas MASTERPIECE</h1>
+    <h1>FLL UNEHERATED</h1>
     <div class="button-group">
         <a href="placar.html" class="placar-button">Abrir Placar</a>
         <a href="drawplan.html" class="drawplan-button">Abrir Drawplan</a>
@@ -90,3 +90,4 @@
 </body>
 
 </html>
+
