--- a/placar.html
+++ b/placar.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Placar FLL - Masterpiece</title>
+    <title>Scorer FLL - UNEARTHED</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
@@ -260,7 +260,7 @@
         <div class="logo-container">
             <img src="logo scorer.png" alt="Logo da Equipe">
         </div>
-        <h1>Placar FLL - MASTERPIECE</h1>
+        <h1>Scorer FLL - UNEARTHED</h1>
         <div class="timer-container" id="timer">02:30</div>
         <div class="button-container">
             <button id="start-button">Iniciar Timer</button>
@@ -572,4 +572,5 @@
 </script>
 
 </body>
+
 </html>
