--- a/drawplan.html
+++ b/drawplan.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Drawplan FLL - MASTERPIECE</title>
+    <title>Drawplan FLL - UNEARTHED </title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
@@ -174,7 +174,7 @@
 <body>
 
 <div class="container">
-    <h1>Drawplan FLL - MASTERPIECE</h1>
+    <h1>Drawplan FLL - UNEARTHED</h1>
 
     <div class="toolbar">
         <button id="pencil-button" class="selected-tool">Lápis</button>
@@ -470,4 +470,5 @@
         });
     </script>
 </body>
+
 </html>
