--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
             justify-content: center;
             text-align: center;
         }
+        /* Novo estilo para a logo da escola */
+        .escola-logo-container {
+            margin-bottom: 20px;
+            text-align: center;
+        }
+        .escola-logo-container img {
+            max-width: 150px;
+            height: auto;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        /* Estilos existentes */
         .container {
             background-color: rgba(255, 255, 255, 0.95);
             padding: 40px;
@@ -76,20 +88,20 @@
 </head>
 <body>
 
-<div class="container">
-    <div class="logo-container">
-        <img src="logo scorer.png" alt="Logo da Equipe">
+    <div class="escola-logo-container">
+        <img src="logo_escola.png" alt="Logo da Escola">
     </div>
-    <h1>FLL UNEARTHED</h1>
-    <div class="button-group">
-        <a href="placar.html" class="placar-button">Abrir Placar</a>
-        <a href="drawplan.html" class="drawplan-button">Abrir Drawplan</a>
+
+    <div class="container">
+        <div class="logo-container">
+            <img src="logo scorer.png" alt="Logo da Equipe">
+        </div>
+        <h1>FLL UNEARTHED</h1>
+        <div class="button-group">
+            <a href="placar.html" class="placar-button">Abrir Placar</a>
+            <a href="drawplan.html" class="drawplan-button">Abrir Drawplan</a>
+        </div>
     </div>
-</div>
 
 </body>
-
 </html>
-
-
-
