--- a/placar.html
+++ b/placar.html
@@ -322,7 +322,7 @@
         <div class="mission-section">
             <div class="mission-card" data-mission="inspection" data-selection-mode="single">
                 <h2>Inspeção de Equipamentos</h2>
-                <div class="task" data-points="20">Robô e equipamentos couberam na área de lançamento e tinham, no máximo, 12 pol. de altura.</div>
+                <div class="task" data-points="20">Robô e equipamentos couberam na área de lançamento e tinham, no máximo, 30,5 cm de altura.</div>
             </div>
 
             <div class="mission-card" data-mission="1" data-selection-mode="multi">
@@ -612,3 +612,4 @@
     </script>
 </body>
 </html>
+
